src/App.css
:root {
  --yellow: rgb(225, 229, 30);
}
.App {
  height: 100vh;
  width: 100vw;
  text-align: center;
  font-family: poppins;
}
body {
  height: 100%;
  width: 100vh;
  background-color: var(--yellow);
}
.page {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#ny {
  margin-left: 20px;
  min-width: 320px;
  width: 769px;
  overflow: hidden;
}
.nav {
  margin-left: 20px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 15px;
}
#menu-logo {
  max-width: 320px;
}
#binoc {
  z-index: -1;
  right: 0;
  top: -100px;
  position: absolute;
}
.btn-group {
  margin-right: 60px;
}
.btn {
  bottom: 0;
  position: relative;
  z-index: 100;
  margin-left: 12px;
  width: 152px;
  height: 52px;
  border-radius: 5px;
  font-family: poppins;
}
.btn:hover {
  text-decoration: underline;
  cursor: pointer;
}

.how-to {
  margin-top: 50px;
}
.map {
  z-index: 1;
  bottom: 0;
  right: 0;
  position: absolute;
  margin: 0 auto;
  min-width: 150px;
  min-height: 150px;
  width: 20%;
  height: 20%;
  transition: all linear .2s;
}
.map-active {
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: 1;
  width: 100vw;
  height: 80vh;
  transition: all linear .2s;
}
.streetview {
  height: 100vh;
}

.timer {
  border-radius: 5px;
  transform: translate(-50%, -50%);
  top: 50px;
  left: 50%;
  justify-content: center;
  display: flex;
  align-items: center;
  padding: 5px;
  height: 40px;
  width: 20%;
  min-width: 175px;
  position: absolute;
  z-index: 2;
  background-color: var(--yellow);
  animation: fadeIn 2s;
}
/* .control {
  margin: 10px;
  height: 20px;
  width: 20px;
  background-color: red;
} */
.control {
  margin: 10px;
  background: none padding-box rgb(255, 255, 255);
  display: block;
  border: 0px;
  padding: 2px 12px 2px 12px;
  text-transform: none;
  appearance: none;
  position: relative;
  cursor: pointer;
  user-select: none;
  direction: ltr;
  overflow: hidden;
  text-align: left;
  color: rgb(0, 0, 0);
  font-family: Arial, sans-serif;
  font-size: 25px;
  border-radius: 2px;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px -1px;
  font-weight: 500;
}
.control:hover{
  background-color: rgb(235, 235, 235);
}
.gm-style-mtc{
  margin-left: 10px;
}
.game-end{
  color: red;
  animation: wiggle 1s infinite;
}
.countdown{
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 0;
  background-color: aqua;
  height: 100vh;
  width: 100vw;
  color: red;
  font-size: 200px;
}
.confirm{
  transform: translate(-50%, -50%);
  bottom: 5%;
  left: 50%;
  position: absolute;
  background-color: rgb(81,239,13);
}
.help-text{
  font-size: 20px;
}
.game-over{
  background-color: rgb(245, 242, 242);
  padding: 2%;
  height: 20vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.result-card{
  width: fit-content;
  background-color: var(--yellow);
  margin-bottom: 20px;
  padding: 10px;
  border-radius: 5px;
}
.card{
  border-radius: 5px;
  padding: 10px;
  height: fit-content;
  width: fit-content;
  background-color: rgb(201, 197, 197);
}
.overlay{
  overflow: hidden;
  display: inline-block;
  height: 100vh;
  width: 100vw;
  position: relative;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(51, 46, 46, 0.7);
  z-index: 100;
  mask-image: radial-gradient(circle farthest-side at 50vw 60vh, transparent 45%, white 50%);
}
@keyframes wiggle {
  0% {transform: translate(1px, 1px) rotate(0deg);}
  20% {transform: translate(-1px, 2px) rotate(-1deg);}
  40% {transform: translate(1px, -1px) rotate(1deg);}
  60% {transform: translate(-1px, 2px) rotate(-1deg);}
  80% {transform: translate(1px, 2px) rotate(0deg);}
  100% {transform: translate(1px, -2px) rotate(-1deg);}
}

@keyframes fadeIn {
  0% {opacity: 0;}
  100% {opacity: 1;}
  
}


@media screen and (max-width: 769px) {
  #ny {
    margin: 0;
    width: 100vw;
  }
  #binoc {
    display: none;
  }
  #menu-logo {
    margin: 0 auto;
  }
  .nav {
    flex-direction: column;
  }
  .btn-group {
    height: 120px;
    justify-content: space-between;
    flex-direction: column;
    display: flex;
    left: 50%;
    transform: translate(-50%, -50%);
    top: 300px;
    position: absolute;
    margin: 0 auto;
  }
  .how-to {
    left: 5%;
    top: 20%;
    width: 90%;
    height: fit-content;
  }
}

@media screen and (max-width: 1350px) {
  #binoc {
    width: 75%;
  }
}

